--- a/index.html
+++ b/index.html
@@ -8,24 +8,16 @@
 </head>
 <body>
 <button id="showAlert">按钮</button>
-<!--<section>-->
-    <!--<div class="alert-box">-->
-        <!--<p class="alert-title">标题</p>-->
-        <!--<div class="alert-content">我是内容。</div>-->
-        <!--<div class="alert-button">-->
-            <!--<button class="cancel">取消</button>-->
-            <!--<button class="ensure">确定</button>-->
-        <!--</div>-->
-    <!--</div>-->
-<!--</section>-->
 <script src="http://apps.bdimg.com/libs/jquery/2.1.4/jquery.min.js"></script>
 <script src="js/jquery-alert.js"></script>
 <script>
     $('#showAlert').click(function () {
         $(this).jQueryAlert({
-            
+            title:'提示',
+            content:'天降大任于斯人也，必先苦其心智，劳其筋骨，饿其体肤,空乏其身，行拂乱其所为，所以动心忍性，增益其所不能。'
         }).confirmBtn(function (res) {
             console.log(res);
+            this.destroy();
         })
     })
 </script>
