--- a/index.html
+++ b/index.html
@@ -15,11 +15,20 @@
         $(this).jQueryAlert({
             title:'提示',
             content:'天降大任于斯人也,必先苦其心智，劳其筋骨，饿其体肤,空乏其身，行拂乱其所为，所以动心忍性，增益其所不能。',
-            isOne:false
-        }).confirmBtn(function (res) {
-            console.log(res);
-            this.destroy();
-        })
+            isOne:true,
+            confirm: function (res) {
+                console.log(res);
+                this.destroy();
+            },
+            cancelB:function (res) {
+                console.log(res);
+                this.destroy();
+            },
+            konw:function (res) {
+                console.log(res);
+                this.destroy();
+            }
+        });
     })
 </script>
 </body>
